--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
     const map = L.map('map').setView([47.4, 8.6], 13);
 
-    L.tileLayer('https://api.maptiler.com/maps/bright/256/{z}/{x}/{y}.png?key=62fWxjuKZdoP6vlFjq0a', {
+    L.tileLayer('https://api.maptiler.com/maps/bright/?key=62fWxjuKZdoP6vlFjq0a#15.7/47.30006/8.76503', {
     maxZoom: 19,
     attribution: '© OpenStreetMap'
     }).addTo(map);
