--- a/index.html
+++ b/index.html
@@ -4,42 +4,67 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Map</title>
-  <meta name="description" content="Interaktive Karte mit Suche und Geolokalisierung." />
+  <meta name="description" content="Interaktive Karte mit Suche, Geolokalisierung und mehreren Basiskarten." />
+
+  <!-- Performance -->
+  <link rel="preconnect" href="https://unpkg.com" crossorigin />
+  <link rel="preconnect" href="https://api.maptiler.com" crossorigin />
 
   <!-- Leaflet CSS -->
-  <link
-    rel="preconnect"
-    href="https://unpkg.com"
-    crossorigin
-  />
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
+    crossorigin
   />
+
+  <!-- (Optional) MarkerCluster CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+  />
+
+  <!-- App Styles -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <h1>My Map</h1>
-    <form id="search-form" aria-label="Ort suchen">
+    <div class="brand">
+      <h1 class="title">My Map</h1>
+    </div>
+
+    <form id="search-form" class="search" role="search" aria-label="Ort suchen">
       <label for="search-input" class="visually-hidden">Suche</label>
-      <input id="search-input" name="q" type="search" placeholder="Adresse, Ort…" autocomplete="off" />
-      <button type="submit">Suchen</button>
-      <button type="button" id="locate-btn" title="Mich finden">📍</button>
+      <input
+        id="search-input"
+        name="q"
+        type="search"
+        placeholder="Adresse, Ort …"
+        autocomplete="off"
+        inputmode="search"
+        aria-describedby="status"
+      />
+      <button type="submit" class="btn primary" title="Suchen">Suchen</button>
+      <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
     </form>
-    <p id="status" role="status" aria-live="polite"></p>
+
+    <p id="status" role="status" aria-live="polite" class="status"></p>
   </header>
 
   <main>
     <div id="map" role="application" aria-label="Karte"></div>
   </main>
 
-  <footer>
+  <footer class="site-footer">
     <small>
-      Tiles © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
-      – Suche via Nominatim. Diese Seite sendet Suchbegriffe an Nominatim-Server.
+      Karten & Daten: © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
+      · Tiles via <a href="https://www.maptiler.com">MapTiler</a>
+      · <a href="https://opentopomap.org">OpenTopoMap</a>
+      · Suche via Nominatim. Diese Seite sendet Suchbegriffe an Nominatim-Server.
     </small>
   </footer>
 
@@ -48,14 +73,16 @@
     defer
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
+    crossorigin
   ></script>
-  <!-- (Optional) MarkerCluster -->
+
+  <!-- (Optional) MarkerCluster JS -->
   <script
     defer
     src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"
   ></script>
 
+  <!-- App JS -->
   <script defer src="js/app.js"></script>
 </body>
 </html>
