--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="brand">
-      <h1 class="title">My Map</h1>
-    </div>
+  <header class="site-header" data-collapsible>
+  <div class="brand">
+    <h1 class="title">My Map</h1>
+    <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
+      ▼
+    </button>
+  </div>
 
     <form id="search-form" class="search" role="search" aria-label="Ort suchen">
       <label for="search-input" class="visually-hidden">Suche</label>
