--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>My Map</title>
   <meta name="description" content="Interaktive Karte mit Suche, Geolokalisierung und mehreren Basiskarten." />
 
-  <!-- Performance -->
   <link rel="preconnect" href="https://unpkg.com" crossorigin />
   <link rel="preconnect" href="https://api.maptiler.com" crossorigin />
 
@@ -17,8 +16,7 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin
   />
-
-  <!-- (Optional) MarkerCluster CSS -->
+  <!-- MarkerCluster CSS -->
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
@@ -33,12 +31,12 @@
 </head>
 <body>
   <header class="site-header" data-collapsible>
-  <div class="brand">
-    <h1 class="title">My Map</h1>
-    <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
-      ▼
-    </button>
-  </div>
+    <div class="brand">
+      <h1 class="title">My Map</h1>
+      <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
+        ▼
+      </button>
+    </div>
 
     <form id="search-form" class="search" role="search" aria-label="Ort suchen">
       <label for="search-input" class="visually-hidden">Suche</label>
@@ -78,8 +76,7 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin
   ></script>
-
-  <!-- (Optional) MarkerCluster JS -->
+  <!-- MarkerCluster JS -->
   <script
     defer
     src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"
