--- a/index.html
+++ b/index.html
@@ -30,31 +30,33 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header class="site-header" data-collapsible>
-    <div class="brand">
-      <h1 class="title">My Map</h1>
-      <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
-        ▼
-      </button>
-    </div>
+<header class="site-header" data-collapsible>
+  <div class="brand">
+    <!-- Bild statt Text -->
+    <img src="img/header.png" alt="BASEFIVE MAP" class="brand-logo" />
+    <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
+      ▼
+    </button>
+  </div>
 
-    <form id="search-form" class="search" role="search" aria-label="Ort suchen">
-      <label for="search-input" class="visually-hidden">Suche</label>
-      <input
-        id="search-input"
-        name="q"
-        type="search"
-        placeholder="Adresse, Ort …"
-        autocomplete="off"
-        inputmode="search"
-        aria-describedby="status"
-      />
-      <button type="submit" class="btn primary" title="Suchen">Suchen</button>
-      <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
-    </form>
+  <form id="search-form" class="search" role="search" aria-label="Ort suchen">
+    <label for="search-input" class="visually-hidden">Suche</label>
+    <input
+      id="search-input"
+      name="q"
+      type="search"
+      placeholder="Adresse, Ort …"
+      autocomplete="off"
+      inputmode="search"
+      aria-describedby="status"
+    />
+    <button type="submit" class="btn primary" title="Suchen">Suchen</button>
+    <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
+  </form>
 
-    <p id="status" role="status" aria-live="polite" class="status"></p>
-  </header>
+  <p id="status" role="status" aria-live="polite" class="status"></p>
+</header>
+
 
   <main>
     <div id="map" role="application" aria-label="Karte"></div>
