--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Map</title>
+  <title>BASEFIVE MAP</title>
   <meta name="description" content="Interaktive Karte mit Suche, Geolokalisierung und mehreren Basiskarten." />
 
   <link rel="preconnect" href="https://unpkg.com" crossorigin />
@@ -30,33 +30,37 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-<header class="site-header" data-collapsible>
-  <div class="brand">
-    <!-- Bild statt Text -->
-    <img src="img/header.png" alt="BASEFIVE MAP" class="brand-logo" />
-    <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
-      ▼
-    </button>
-  </div>
+  <header class="site-header" data-collapsible>
+    <div class="brand">
+      <!-- Logo -->
+      <img
+        src="img/header.png"
+        srcset="img/header.png 2x"
+        alt="BASEFIVE MAP"
+        class="brand-logo"
+      />
+      <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
+        ▼
+      </button>
+    </div>
 
-  <form id="search-form" class="search" role="search" aria-label="Ort suchen">
-    <label for="search-input" class="visually-hidden">Suche</label>
-    <input
-      id="search-input"
-      name="q"
-      type="search"
-      placeholder="Adresse, Ort …"
-      autocomplete="off"
-      inputmode="search"
-      aria-describedby="status"
-    />
-    <button type="submit" class="btn primary" title="Suchen">Suchen</button>
-    <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
-  </form>
+    <form id="search-form" class="search" role="search" aria-label="Ort suchen">
+      <label for="search-input" class="visually-hidden">Suche</label>
+      <input
+        id="search-input"
+        name="q"
+        type="search"
+        placeholder="Adresse, Ort …"
+        autocomplete="off"
+        inputmode="search"
+        aria-describedby="status"
+      />
+      <button type="submit" class="btn primary" title="Suchen">Suchen</button>
+      <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
+    </form>
 
-  <p id="status" role="status" aria-live="polite" class="status"></p>
-</header>
-
+    <p id="status" role="status" aria-live="polite" class="status"></p>
+  </header>
 
   <main>
     <div id="map" role="application" aria-label="Karte"></div>
@@ -67,7 +71,7 @@
       Karten & Daten: © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
       · Tiles via <a href="https://www.maptiler.com">MapTiler</a>
       · <a href="https://opentopomap.org">OpenTopoMap</a>
-      · Suche via Nominatim. Diese Seite sendet Suchbegriffe an Nominatim-Server.
+      · Suche via Nominatim.
     </small>
   </footer>
 
