Added search results as dropdown

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <header class="site-header" data-collapsible>
     <div class="brand">
-      <!-- Textlogo statt Bild -->
+      <!-- Textlogo -->
       <h1 class="brand-logo-txt" aria-label="BASEFIVE MAP">
         <span class="logo-base">BASE</span><span class="logo-five">FIVE</span><span class="logo-map"> MAP</span>
       </h1>
@@ -52,9 +52,15 @@
         autocomplete="off"
         inputmode="search"
         aria-describedby="status"
+        aria-controls="search-results"
+        aria-autocomplete="list"
+        aria-expanded="false"
       />
       <button type="submit" class="btn primary" title="Suchen">Suchen</button>
       <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
+
+      <!-- Autocomplete-Dropdown -->
+      <ul id="search-results" class="search-results" role="listbox" aria-label="Suchvorschläge"></ul>
     </form>
 
     <p id="status" role="status" aria-live="polite" class="status"></p>
