--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BASEFIVE MAP</title>
-  <meta name="description" content="Interaktive Karte mit Suche, Geolokalisierung und mehreren Basiskarten." />
+  <meta name="description" content="Interaktive Karte mit Suche, Geolokalisierung, Basiskarten und Wetter im Popup." />
 
   <link rel="preconnect" href="https://unpkg.com" crossorigin />
   <link rel="preconnect" href="https://api.maptiler.com" crossorigin />
+  <link rel="preconnect" href="https://api.open-meteo.com" crossorigin />
 
   <!-- Leaflet CSS -->
   <link
@@ -28,15 +29,18 @@
 
   <!-- App Styles -->
   <link rel="stylesheet" href="css/styles.css" />
+  <!-- Preconnects -->
+<link rel="preconnect" href="https://api.rainviewer.com" crossorigin>
+<link rel="preconnect" href="https://tilecache.rainviewer.com" crossorigin>
+
 </head>
 <body>
+  <!-- ... (Rest identisch zu deiner aktuellen Datei) ... -->
   <header class="site-header" data-collapsible>
     <div class="brand">
-      <!-- Textlogo -->
       <h1 class="brand-logo-txt" aria-label="BASEFIVE MAP">
         <span class="logo-base">BASE</span><span class="logo-five">FIVE</span><span class="logo-map"> MAP</span>
       </h1>
-
       <button id="header-toggle" class="btn ghost" aria-expanded="true" aria-controls="search-form" title="Header ein-/ausklappen">
         ▼
       </button>
@@ -45,52 +49,37 @@
     <form id="search-form" class="search" role="search" aria-label="Ort suchen">
       <label for="search-input" class="visually-hidden">Suche</label>
       <input
-        id="search-input"
-        name="q"
-        type="search"
-        placeholder="Adresse, Ort …"
-        autocomplete="off"
-        inputmode="search"
-        aria-describedby="status"
-        aria-controls="search-results"
-        aria-autocomplete="list"
-        aria-expanded="false"
+        id="search-input" name="q" type="search" placeholder="Adresse, Ort …"
+        autocomplete="off" inputmode="search"
+        aria-describedby="status" aria-controls="search-results"
+        aria-autocomplete="list" aria-expanded="false"
       />
       <button type="submit" class="btn primary" title="Suchen">Suchen</button>
       <button type="button" id="locate-btn" class="btn" title="Mich finden" aria-label="Aktuelle Position finden">📍</button>
 
-      <!-- Autocomplete-Dropdown -->
       <ul id="search-results" class="search-results" role="listbox" aria-label="Suchvorschläge"></ul>
     </form>
 
     <p id="status" role="status" aria-live="polite" class="status"></p>
   </header>
 
-  <main>
-    <div id="map" role="application" aria-label="Karte"></div>
-  </main>
+  <main><div id="map" role="application" aria-label="Karte"></div></main>
 
   <footer class="site-footer">
     <small>
       Karten & Daten: © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
       · Tiles via <a href="https://www.maptiler.com">MapTiler</a>
       · <a href="https://opentopomap.org">OpenTopoMap</a>
-      · Suche via Nominatim.
+      · Suche & Reverse via Nominatim · Wetter via Open-Meteo.
+      · Wetter via Open-Meteo · Radar © RainViewer.
     </small>
   </footer>
 
   <!-- Leaflet JS -->
-  <script
-    defer
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin
-  ></script>
+  <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin></script>
   <!-- MarkerCluster JS -->
-  <script
-    defer
-    src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"
-  ></script>
+  <script defer src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
   <!-- App JS -->
   <script defer src="js/app.js"></script>
